--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,13 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2
-          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+          key: maven-${{ runner.os }}-${{ hashFiles('**/messagingApp-backend/pom.xml') }}
           restore-keys: maven-${{ runner.os }}-
 
       - name: Build and run tests
         run: |
           cd messagingApp-backend
-          mvn clean install
+          mvn clean install -U # -U forces maven to update dependencies
           mvn test
 
   frontend-tests:
