--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Debug Environment Variables
+        run: env | grep DB_
+
       - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
