Added example application properties to use to prepare using application properties instead of .env file
Added application.properties to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,7 @@ yarn-error.log*
 
 *./.env
 .env
+
+*/application.properties
+messagingApp-backend/src/main/resources/application.properties
+application.properties
