--- a/messagingApp-backend/src/test/resources/application-test.properties
+++ b/messagingApp-backend/src/test/resources/application-test.properties
@@ -1,7 +1,16 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Disable H2 or any embedded database (since we're using Supabase)
+#spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:6543/postgres
+#spring.datasource.username=postgres.kutxlfnyhecasfmxnjba
+#spring.datasource.password=cbds8iy4wbrefjds
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Ensure Hibernate manages schema correctly for Supabase
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Ensure that the SQL scripts (if any) run on test startup
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
