Added dependencies and configuration for frontend tests
Fixed tests in the frontend failing when importing axios.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,4 +77,4 @@ jobs:
       - name: Run tests
         run: |
           cd frontend
-          npm test -- --watchAll=false || echo "No tests found, skipping..."
+          npm test -- --watchAll=false
