--- a/messagingApp-backend/pom.xml
+++ b/messagingApp-backend/pom.xml
@@ -60,6 +60,10 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<!-- PostgreSQL JDBC Dependency -->
 		<dependency>
@@ -71,21 +75,6 @@
 			<groupId>io.github.cdimascio</groupId>
 			<artifactId>dotenv-java</artifactId>
 			<version>3.1.0</version>
-		</dependency>
-
-		<!-- Mocking for test -->
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>4.0.0</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-inline</artifactId>
-			<version>4.0.0</version>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
